--- a/src/app/pages/cadastro/cadastro.component.html
+++ b/src/app/pages/cadastro/cadastro.component.html
@@ -133,6 +133,7 @@
                       nbSuffix
                       nbButton
                       ghost
+                      type="button"
                       (click)="toggleShowPassword()"
                     >
                       <nb-icon
@@ -245,9 +246,8 @@
                     <input
                       nbInput
                       fullWidth
-                      type="text"
+                      type="date"
                       id="birthDate"
-                      mask="00/00/0000"
                       formControlName="birthDate"
                       autocomplete="off"
                       placeholder="ex.: dd/mm/aaaa"
@@ -262,7 +262,6 @@
                       fullWidth
                       type="text"
                       id="motherFullName"
-                      mask="00/00/0000"
                       formControlName="motherFullName"
                       autocomplete="off"
                       placeholder="ex.: Fulanx da Silva"
@@ -291,7 +290,57 @@
               </div>
             </form>
           </nb-step>
-          <nb-step label="Resultado"></nb-step>
+          <nb-step label="Resultado">
+            <!-- Negado -->
+            <div class="row mt-4">
+              <div
+                class="
+                  c-simulation-denied__content
+                  col-12
+                  d-flex
+                  flex-column
+                  justify-content-center
+                  align-items-center
+                  px-4
+                "
+              >
+                <img
+                  class="my-4"
+                  src="../../../assets/undraw-alert.svg"
+                  alt="simulação-negada"
+                  width="300px"
+                />
+                <div
+                  class="
+                    c-simulation-denied__content--title
+                    d-flex
+                    flex-column
+                    justify-content-center
+                    my-4
+                  "
+                >
+                  <h1 class="text-center">Título do erro aqui</h1>
+                  <h6 class="lead-color text-center">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                    do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua. Enim adim ad minimim veniam, quis nostrud exercise
+                    ullamco laboris nisi ut alipip ex ea commodo consequat. Duis
+                    auteur irure pain in reprehenderit in voluptate velit this
+                    cillum dolore eu fugiat nulla pariatur. Excepteur sint
+                    occecat cupidatat non proident, sunt in culpa qui officia
+                    deserunt mollit anim id est laborum.
+                  </h6>
+                  <div
+                    class="alert alert-info mt-5 d-flex aligm-items-center"
+                    role="alert"
+                  >
+                    <nb-icon class="me-2" icon="alert-circle-outline"></nb-icon>
+                    This is a info alert—check it out!
+                  </div>
+                </div>
+              </div>
+            </div>
+          </nb-step>
         </nb-stepper>
       </nb-card-body>
     </nb-card>
