Ajustes gerais de responsabilidade

--- a/src/app/pages/cadastro/cadastro.component.html
+++ b/src/app/pages/cadastro/cadastro.component.html
@@ -30,7 +30,7 @@
     </div>
   </div>
   <div class="row mt-5">
-    <nb-card class="col-12 p-4">
+    <nb-card class="col-12 p-0 p-lg-4">
       <nb-card-body>
         <nb-stepper linear disableStepNavigation orientation="horizontal">
           <nb-step
@@ -61,7 +61,7 @@
                 />
               </div>
               <!-- Fieldset-->
-              <fieldset class="col-12 col-lg-5 d-flex flex-wrap">
+              <fieldset class="col-12 col-lg-5 p-0 px-lg-2 d-flex flex-wrap">
                 <div class="col-12 px-2 my-2">
                   <strong>Já possui cadastro?</strong>
                 </div>
@@ -205,7 +205,7 @@
                 />
               </div>
               <!-- Fieldset-->
-              <fieldset class="col-12 col-lg-5 d-flex flex-wrap">
+              <fieldset class="col-12 col-lg-5 p-0 px-lg-2 d-flex flex-wrap">
                 <div class="col-12 px-2 my-2">
                   <strong>
                     Agora, nos informe os dados para consultar sua situação:
