--- a/src/app/components/card-tipo-emprestimo/card-tipo-emprestimo.component.html
+++ b/src/app/components/card-tipo-emprestimo/card-tipo-emprestimo.component.html
@@ -15,7 +15,15 @@
       {{ subtitle }}
     </p>
     <div class="c-loan-type-card__action mt-5">
-      <button nbButton status="primary" class="w-100">Selecionar</button>
+      <button
+        nbButton
+        status="primary"
+        class="w-100"
+        type="button"
+        (click)="goToRegisterPage()"
+      >
+        Selecionar
+      </button>
     </div>
   </app-card>
 </div>
